ansible-terraform-02/terraform/security_groups.tf
resource "aws_security_group" "allow_admin_ssh" {
    name = "allow_admin_ssh"
    vpc_id = "${data.aws_vpc.main.id}"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.myip}"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = [ "0.0.0.0/0" ]
    }
}
resource "aws_security_group" "allow_admin_http" {
    name = "allow_admin_http"
    vpc_id = "${data.aws_vpc.main.id}"

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["${var.myip}"]
    }
}
